log
nvcc -O3 -std=c++11 -o main.o -c main.cu 
main.cu:240:1: warning: '/*' within block comment [-Wcomment]
/*
^
1 warning generated.
main.cu(181): warning: variable "dt" was declared but never referenced

main.cu:240:1: warning: '/*' within block comment [-Wcomment]
/*
^
1 warning generated.
main.cu(181): warning: variable "dt" was declared but never referenced

./tupleHelper.hpp:51:32: error: expected ')'
((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]);
                               ^
./tupleHelper.hpp:51:2: note: to match this '('
((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]);
 ^
./tupleHelper.hpp:51:112: error: expected ')'
((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]);
                                                                                                               ^
./tupleHelper.hpp:51:81: note: to match this '('
((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]);
                                                                                ^
./tupleHelper.hpp:64:30: error: expected ')'
((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]);
                             ^
./tupleHelper.hpp:64:2: note: to match this '('
((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]);
 ^
./tupleHelper.hpp:64:108: error: expected ')'
((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]);
                                                                                                           ^
./tupleHelper.hpp:64:79: note: to match this '('
((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]) = (((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]);
                                                                              ^
./tupleHelper.hpp:79:34: error: expected ')'
(((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]); }
                                 ^
./tupleHelper.hpp:79:3: note: to match this '('
(((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]); }
  ^
./tupleHelper.hpp:79:245: error: expected ')'
(((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]); }
                                                                                                                                                                                                                                                    ^
./tupleHelper.hpp:79:215: note: to match this '('
(((soax.std::tuple_element< N - 1, AttributeTuple> ::type::template Access< IndexOfAtt< typename std::__1::tuple_element< N - 1, AttributeTuple> ::type, AttributeTuple> ::value, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< N - 1, AttributeTuple> ::type::Object::value)[j]); }
                                                                                                                                                                                                                      ^
./tupleHelper.hpp:90:32: error: expected ')'
(((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]); }
                               ^
./tupleHelper.hpp:90:3: note: to match this '('
(((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]); }
  ^
./tupleHelper.hpp:90:142: error: expected ')'
(((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]); }
                                                                                                                                             ^
./tupleHelper.hpp:90:114: note: to match this '('
(((soax.std::tuple_element< 0UL, AttributeTuple> ::type::template Access< 0, AttributeTuple> ::data_)[j])[i]) = ((obj.std::tuple_element< 0UL, AttributeTuple> ::type::Object::value)[j]); }
                                                                                                                 ^
8 errors generated.
make: *** [main.o] Error 1
